# zor-lang

./: .gitignore  CMakeLists.txt  COPYING  LICENSE  README.md  Readme.md  first.tl  license_header.txt  test-error.sh  test.py
doc/: grammar.txt  lex.txt
draft/: first.mm  hello_world.mm  list.mm  process.mm  testbench.mm
lib/: CMakeLists.txt  fs.cpp  str.cpp  x64_start.asm
resources/: The Coming Software Apocalypse - The Atlantic
src/: CMakeLists.txt  ast.adb  ast.ads  cpp_unwriter.adb  cpp_unwriter.ads  lex.adb  lex.ads  main.adb  main.cpp  parser.adb  parser.ads  pass1.adb  pass1.ads  unwriter.adb  unwriter.ads
src/ast/: Expression.hpp  Global.hpp  Statement.hpp  Types.hpp  ast.hpp
src/compiler/: Compiler.cpp  Flow.cpp  Variable.cpp
src/debug/: AstDebug.cpp  AstDebug.hpp  Unparse.cpp  Unparse.hpp
src/lex/: lex.py
src/parser/: Parser.cpp  Parser.hpp
src/preproc/: Preproc.cpp
test/array/: char_array1.tl  int64_array2.tl  int_array2.tl  str_array2.tl  uint64_array1.tl  uint_array2.tl
test/ast/: 001.tl  002.tl  012.tl  013.tl  014.tl  015.tl  021.tl  023.tl  027.tl
test/basic/: bool1.tl  char1.tl  first.tl  int64_1.tl  ubyte1.tl
test/cond/: cond1.tl  cond4.tl  cond_byte.tl  cond_ubyte.tl  cond_uint64.tl
test/cpp/: 001.tl  002.tl  007.tl  009.tl  021.tl
test/error/: p1002.out  p1002.tl  p1_error1.out  p1_error1.tl  p1_error2.out  p1_error2.tl
test/loop/: break.tl  continue.tl  (+1 more)
tl-parser-ada/: test-cpp.sh  test-parser.sh
tlc-ada/: Readme.md  build.sh  first.tl  test-ast.sh  tinylang.gpr
tlc-cpp/: COPYING  first.tl  install-stdlib.sh  install.sh  license_header.txt  test.sh
(+143 files in other folders)
